# api-currency

./: Dockerfile  Makefile  docker-compose.yml  hypercorn.toml  pyproject.toml  sample.env
.github/workflows/: CI.yml  continuous_integration.yml  docker.yml  ecs.yml  lint.yml  main.yml  test.yml
scripts/: install_hooks.sh
src/: config.py  main.py  main_api.py
src/application/repository/: currency_repository.py  exchange_rate_repository.py
src/application/use_case/: convert_currency.py  get_currency.py
src/domain/entity/: currency.py  exchange_rate.py
src/domain/service/: currency_converter_service.py
src/infrastructure/api/: fastapi_adapter.py  http_server.py  router_controller.py
src/infrastructure/database/: asyncpg_adapter.py  connection.py
src/infrastructure/gateway/: http_client.py
src/infrastructure/repository/: currency_repository_database.py  exchange_rate_repository_database.py
test/: conftest.py  database.sql
test/integration/: conftest.py  test_currency_convert.py  test_get_currency.py  test_main_api.py
test/unit/: test_currency.py  test_currency_converter_service.py  test_exchange_rate.py
