[tool.poetry]
name = "currency-converter"
version = "0.1.0"
description = ""
authors = ["Ivar Carrera <ivar.carrera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.96.0"
hypercorn = "^0.14.3"
loguru = "^0.7.0"
orjson = "^3.9.0"
python-dotenv = "^1.0.0"
asyncpg = "^0.27.0"
uvloop = "^0.17.0"
uvicorn = "^0.22.0"
pydantic = "^1.10.9"


[tool.poetry.group.test.dependencies]
pytest = "*"
parameterized = "*"
pytest-cov = "*"
asgi-lifespan = "*"
alt-pytest-asyncio = "*"
httpx = "*"


[tool.poetry.group.lint.dependencies]
blue = "*"
isort = "*"
pip-audit = "*"
mypy = "*"
ruff = "^0.0.272"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.blue]
line-length = 110

[tool.isort]
profile = "black"
line_length = 110

[tool.ruff]
line-length = 110
select = [
    "ARG",
    "B",
    "C4",
    "E",
    "ERA",
    "F",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RET",
    "S",
    "T10",
    "UP",
    "W",
]
ignore = ["B008", "E402"]
target-version = "py311"

[tool.ruff.pylint]
max-args = 6

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"test/**" = ["ARG", "PLR2004", "S"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
